updated some typos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	Story by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+	-->
 
 <html>
 	<head>
@@ -158,7 +158,7 @@
 														<i>University of Waterloo (September 2018 - April 2023)</i><br>
 														
 														My undergraduate degree in geography allowed me to take a wide breadth of courses and
-														find unique ways of bending
+														find unique ways of blending
 														disciplines together. My passions in environmental issues, political issues, and
 														economics were fulfilled by studying
 														a specialisation in "Society and Economics".
@@ -190,7 +190,7 @@
 														When not selling the books themselves, I read voraciously, both on and off the clock.
 														With books specifically, I read, sold, reviewed, recommended, marketed, and edited
 														books. <br>
-														I also helped run the Instagram, organised new marketting and display strategies, and
+														I also helped run the Instagram, organised new marketing and display strategies, and
 														ran events- such as author signings and meet-and-greets.
 								
 													</p>
@@ -307,7 +307,7 @@
 
 							</ul>
 							<p>&copy; Made by Isabel Drummond with help from <a href="https://html5up.net">HTML5 UP</a> and <a href="https://docs.github.com/en/pages">GitHub Pages</a>. <br>
-							Latest update: September 2025</p>
+							Latest update: December 2025</p> <br>
 						</div>
 					</footer>
 
@@ -321,7 +321,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 
 </html>
