fixing some internal and external links

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 								
 													</p>
 												</dd>
-												<dt>Hydrologic Biogeochemistry Modelling Research Assistant</dt>
+												<dt>Hydrologic Biogeochemical Modelling Research Assistant</dt>
 												<dd>
 													<p>
 														<i>Basu Lab</a>, University of Waterloo (January - April 2020)</i><br>
@@ -254,7 +254,7 @@
                                                     </p>
                                                 </dd>
                                                 <dt>
-                                                    <a href="https://www.concordia.ca/sgs/funding/graduate-funding/volt-age-masters-scholarship.html">
+                                                    <a href="https://www.concordia.ca/gradstudies/funding/entrance-awards/volt-age-masters-scholarship.html">
                                                         <u>Volt-Age Masters Scholarship</u>
                                                     </a>
                                                 </dt>
@@ -265,7 +265,7 @@
                                                     </p>
                                                 </dd>
                                                 <dt>
-                                                    <a href="https://www.nserc-crsng.gc.ca/students-etudiants/ug-pc/usra-brpc_eng.asp#a2">
+                                                    <a href="https://www.nserc-crsng.gc.ca/Students-Etudiants/UG-PC/USRA-BRPC_eng.asp">
                                                         <u>Natural Sciences and Engineering Research Council of Canada (NSERC) Undergraduate Student Research Award (USRA)</u>
                                                     </a>
                                                 </dt>
@@ -298,7 +298,7 @@
 
 
 				<!-- Footer -->
-					<footer class="wrapper style1 align-center">
+					<footer class="wrapper style1 align-center" id="footer">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="https://github.com/isabeldrummond" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
