--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
 													<a href="https://www.crewcsn.com/">Have you signed your union card this semester?</a><br>
 													</p>
 												</dd>
+												<dt>📚 Teaching Assistant</dt>
+												<dd>
+													<p>
+														<i>Concordia University (September 2024 - Present)</i><br>
+														URBS 240: Planning (W26, tutorial teaching)<br>
+														GEOG 290: Environment & Society (W25, grading)<br>
+														URBS 380: Urban and Regional Economic Development (F24, grading)
+													</p>
+												</dd>
 												<dt>📖 LEADS student</dt>
 												<dd>
 													<p><i><a href="https://sustainabilitydigitalage.org/"> <u>Future Earth: Sustainability in the Digital Age</u></a> (September 2024 - Present)</i><br>
@@ -173,14 +182,6 @@
 										</header>
 										<div class="content">
 											<dl>
-												<dt>Teaching Assistant</dt>
-												<dd>
-													<p>
-														<i>Concordia University (September 2024 - April 2025)</i><br>
-														I worked as a teaching assistant for two courses in the Geography Department at Concordia University during my first year as a graduate student. <br>
-														URBS 380: Urban and Regional Economic Development and GEOG 290: Environment & Society.
-													</p>
-												</dd>
 												<dt>Bookseller</dt>
 												<dd>
 													<p>
@@ -307,7 +308,7 @@
 
 							</ul>
 							<p>&copy; Made by Isabel Drummond with help from <a href="https://html5up.net">HTML5 UP</a> and <a href="https://docs.github.com/en/pages">GitHub Pages</a>. <br>
-							Latest update: December 2025</p> <br>
+							Latest update: January 2026</p> <br>
 						</div>
 					</footer>
 
